--- a/html/index.html
+++ b/html/index.html
@@ -75,25 +75,35 @@
 						<!-- /.card-body -->
 					</div>
 				</div>
-				
+
 				<!-- Content -->
 				<div class="col-12 col-sm-9">
 					<div class="row">
-						<div style="width: 348px;height: 80px; margin-bottom: 30px;" class="col-6 col-sm-6">
+						<!-- <div style="width: 348px;height: 80px; margin-bottom: 30px;" class="col-6 col-sm-6"> -->
+						<div class="col-4">
 							<div class="small-box bg-info">
 								<div style="background:#0675FF; color:#FFF; border-radius: 5px;" class="inner">
 									<h5>Blackheight</h5>
 									<div class="link-top"></div>
-									<h5 id="BlockSum">Loading</h5>
+									<h4 id="BlockSum">Loading</h4>
 								</div>
 							</div>
 						</div>
-						<div style="width: 348px;height: 80px; margin-bottom: 30px;" class="col-6 col-sm-6">
-							<div class="small-box bg-gradient-success">
+						<div class="col-4">
+							<div class="small-box bg-info">
 								<div style="background:#0675FF; color:#FFF; border-radius: 5px;" class="inner">
 									<h5>Market count</h5>
 									<div class="link-top"></div>
-									<h5 id="marketCount">Loading</h5>
+									<h4 id="marketCount">Loading</h4>
+								</div>
+							</div>
+						</div>
+						<div class="col-4">
+							<div class="small-box bg-info">
+								<div style="background:#0675FF; color:#FFF; border-radius: 5px;" class="inner">
+									<h5>Transactions Count</h5>
+									<div class="link-top"></div>
+									<h4 id="TransactionsCount">0</h4>
 								</div>
 							</div>
 						</div>
@@ -150,13 +160,14 @@
 						<div class="card-body">
 							<div class="row mb-2">
 								<div class="col-12 col-sm-3">
+									<div style="padding: 28%;"></div>
 									<div class="row mb-2">
-										<div class="col-12 col-sm-12">
+										<div class="col-6">
 											<div class="market_icon mb-4">
 												<img id="marketavater" src="">
 											</div>
 										</div>
-										<div class="col-12 col-sm-12">
+										<div class="col-6">
 											<div class="info-box mb-3 bg-warning" style="overflow: hidden;">
 												<span class="info-box-icon"><i class="fas fa-tag"></i></span>
 												<div id="markettags" class="info-box-content"
