--- a/html/index.html
+++ b/html/index.html
@@ -118,7 +118,8 @@
 											<h3 id="market_id" class="card-title"></h3>
 										</div>
 										<!-- 前翻 -->
-										<div style="padding-left: 48%;padding-top: 3px;" class="col-3 col-sm-1">
+										<div class="col-6"></div>
+										<div class="col-3 col-sm-1">
 											<a href="#" class="btn btn-sm btn-tool"
 												style="background-color: #0091FF; width: 40px; height: 30px;"
 												data-change-type="back" onclick="changeid(this)">
@@ -126,7 +127,7 @@
 											</a>
 										</div>
 										<!-- 后翻 -->
-										<div style="padding-left:8%; padding-top: 3px;" class="col-3 col-sm-1">
+										<div class="col-3 col-sm-1">
 											<a href="#" class="btn btn-sm btn-tool"
 												style="background-color: #0091FF; width: 40px; height: 30px; "
 												data-change-type="next" onclick="changeid(this)">
@@ -134,8 +135,8 @@
 											</a>
 										</div>
 									</div>
-
 								</div>
+								
 								<div class="col-12 col-sm-4">
 									<div class="row  mb-6">
 										<!-- marketid -->
@@ -153,8 +154,6 @@
 										</div>
 									</div>
 								</div>
-
-
 							</div>
 						</div>
 						<div class="card-body">
@@ -166,7 +165,8 @@
 											<div class="info-box mb-3 bg-warning" style="overflow: hidden;">
 												<span class="info-box-icon"><i class="fas fa-tag"></i></span>
 												<div id="markettags" class="info-box-content"
-													style="text-align: center;"></div>
+													style="text-align: center;">
+												</div>
 												<!-- /.info-box-content -->
 											</div>
 										</div>
