delete center logo

--- a/html/index.html
+++ b/html/index.html
@@ -172,9 +172,9 @@
 										</div>
 									</div>
 								</div>
-								<div class="market_icon mb-4">
+								<!-- <div class="market_icon mb-4">
 									<img id="marketavater" src="">
-								</div>
+								</div> -->
 								<div class="col-12 col-sm-9" id="pieChart"
 									style="min-height: 150px; height: 500px; max-height: 500px; width: 100%;">
 
