fix market not exit bugs

--- a/html/index.html
+++ b/html/index.html
@@ -136,7 +136,7 @@
 										</div>
 									</div>
 								</div>
-								
+
 								<div class="col-12 col-sm-4">
 									<div class="row  mb-6">
 										<!-- marketid -->
@@ -156,7 +156,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="card-body">
+						<div class="card-body" id="my_card_body">
 							<div class="row mb-2">
 								<div class="col-12 col-sm-3">
 									<div style="padding: 28%;"></div>
@@ -175,11 +175,14 @@
 								<!-- <div class="market_icon mb-4">
 									<img id="marketavater" src="">
 								</div> -->
+								<!-- <span id="pieChart1"> -->
 								<div class="col-12 col-sm-9" id="pieChart"
 									style="min-height: 150px; height: 500px; max-height: 500px; width: 100%;">
-
 								</div>
+								<!-- </span> -->
+
 							</div>
+
 						</div>
 						<!-- /.card-body -->
 					</div>
